overflow bug

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -7,6 +7,7 @@
   font-style: normal;
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
 }
 h1 {
   font-size: 20px;
